crates/client/src/presentation/render/snapshots/client__presentation__render__markdown__tests__snapshot_link.snap
---
source: tui/src/render/markdown.rs
assertion_line: 891
expression: "render(\"see [the docs](https://example.io/guide)\", &theme())"
---
- spans:
    - text: "see "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: the docs
      style:
        fg:
          Named: Blue
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
