crates/client/src/presentation/render/snapshots/client__presentation__render__markdown__tests__snapshot_markdown_table_narrow.snap
---
source: tui/src/render/markdown.rs
assertion_line: 819
expression: "render_with_width(TABLE_MD, &theme(), 24)"
---
- spans:
    - text: ┌──────┬──────┐
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
- spans:
    - text: │
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: Name
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " │"
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: Role
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " │"
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
- spans:
    - text: ├──────┼──────┤
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
- spans:
    - text: │
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: Ada
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " │"
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: Eng
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " │"
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
- spans:
    - text: ├──────┼──────┤
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
- spans:
    - text: │
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: Bob
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " │"
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: "  "
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: PM
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
    - text: " │"
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
- spans:
    - text: └──────┴──────┘
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
