crates/client/src/presentation/render/snapshots/client__presentation__render__markdown__tests__snapshot_partial_unclosed_fence.snap
---
source: crates/tui/src/render/markdown.rs
expression: "fence_structure(&render(\"text\\n```python\\nprint(1)\", &theme()))"
---
[P]text

[C]print[C]([C]1[C])
